overflowing parallax fixed

--- a/JMFproject/assets/gstring/components/modules/_parallax.scss
+++ b/JMFproject/assets/gstring/components/modules/_parallax.scss
@@ -4,7 +4,7 @@
 }
 
 .parallax-wrapper {
-    z-index:1;
+    z-index:0;
     overflow:hidden;
     position: fixed;
     top: 0;
